Update - Consolidation package et simplification du startup de payment et signalr

--- a/Sheaft.Web.Manage/Views/_ViewImports.cshtml
+++ b/Sheaft.Web.Manage/Views/_ViewImports.cshtml
@@ -1,5 +1,5 @@
-﻿@using Sheaft.Manage;
-@using Sheaft.Manage.Models;
+﻿@using Sheaft.Web.Manage;
+@using Sheaft.Web.Manage.Models;
 @using Sheaft.Application.Models;
 @using Sheaft.Domain.Enums;
 @using Sheaft.Core;
