--- a/Sheaft.Web.Payment/Views/_ViewImports.cshtml
+++ b/Sheaft.Web.Payment/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using Sheaft.Payment
-@using Sheaft.Payment.Models
+﻿@using Sheaft.Web.Payment
+@using Sheaft.Web.Payment.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
