--- a/Sheaft.Web.Manage/Views/Orders/Details.cshtml
+++ b/Sheaft.Web.Manage/Views/Orders/Details.cshtml
@@ -8,6 +8,10 @@
     <br />
     <br />
     <div class="form-group">
+        @Html.LabelFor(m => m.Reference)
+        @Html.TextBoxFor(m => m.Reference, null, new { @class = "form-control", @disabled = "disabled" })
+    </div>
+    <div class="form-group">
         @Html.LabelFor(m => m.CreatedOn)
         @Html.TextBoxFor(m => m.CreatedOn, null, new { @class = "form-control", @disabled = "disabled" })
     </div>
