--- a/Sheaft.Infrastructure.Services/Templates/PurchaseOrderCreatedEvent.cshtml
+++ b/Sheaft.Infrastructure.Services/Templates/PurchaseOrderCreatedEvent.cshtml
@@ -159,9 +159,9 @@
                                                                     <tr>
                                                                         <td style="padding:18px 0px 18px 0px; line-height:22px; text-align:inherit;" height="100%" valign="top" bgcolor="" role="module-content">
                                                                             <div>
-                                                                                <div style="font-family: inherit; text-align: center">Votre commande @Model.Reference de @(Model.TotalOnSalePrice)€ pour le @Model.ExpectedDeliveryDate.ToString("dd/MM/yyyy") a bien été envoyée à @Model.VendorName.</div>
+                                                                                <div style="font-family: inherit; text-align: center">Votre commande de @(Model.TotalOnSalePrice)€ pour le @Model.ExpectedDeliveryDate.ToString("dd/MM/yyyy") a bien été envoyée à @Model.VendorName.</div>
                                                                                 <div style="font-family: inherit; text-align: center"><br /></div>
-                                                                                <div style="font-family: inherit; text-align: center">Nous vous tiendrons informé par e-mail des mises à jour du statut de votre commande.</div><div></div>
+                                                                                <div style="font-family: inherit; text-align: center">Nous vous informerons par e-mail des mises à jour du statut de votre commande.</div><div></div>
                                                                             </div>
                                                                         </td>
                                                                     </tr>
