--- a/Sheaft.Infrastructure.Services/Templates/PurchaseOrderRefusedEvent.cshtml
+++ b/Sheaft.Infrastructure.Services/Templates/PurchaseOrderRefusedEvent.cshtml
@@ -129,7 +129,7 @@
                                                             <table class="module preheader preheader-hide" role="module" data-type="preheader" border="0" cellpadding="0" cellspacing="0" width="100%" style="display: none !important; mso-hide: all; visibility: hidden; opacity: 0; color: transparent; height: 0; width: 0;">
                                                                 <tr>
                                                                     <td role="module-content">
-                                                                        <p>@Model.VendorName a refusé votre commande @Model.Reference d'un montant de @(Model.TotalOnSalePrice)€ prévue pour le @Model.ExpectedDeliveryDate.ToString("dd/MM/yyyy").</p>
+                                                                        <p>@Model.VendorName n'a pas pu accepter votre commande d'un montant de @(Model.TotalOnSalePrice)€ prévue pour le @Model.ExpectedDeliveryDate.ToString("dd/MM/yyyy").</p>
                                                                     </td>
                                                                 </tr>
                                                             </table><table class="wrapper" role="module" data-type="image" border="0" cellpadding="0" cellspacing="0" width="100%" style="table-layout: fixed;" data-muid="23797018-fe50-4719-95a7-280ac5cd46f7">
@@ -159,7 +159,7 @@
                                                                     <tr>
                                                                         <td style="padding:18px 0px 18px 0px; line-height:22px; text-align:inherit;" height="100%" valign="top" bgcolor="" role="module-content">
                                                                             <div>
-                                                                                <div style="font-family: inherit; text-align: center">Nous sommes désolés de vous informer que @Model.VendorName a refusé votre commande @Model.Reference d'un montant de @(Model.TotalOnSalePrice)€ prévue pour le @Model.ExpectedDeliveryDate.ToString("dd/MM/yyyy").</div>
+                                                                                <div style="font-family: inherit; text-align: center">Nous sommes désolés de vous informer que @Model.VendorName n'a pas pu accepter votre commande d'un montant de @(Model.TotalOnSalePrice)€ prévue pour le @Model.ExpectedDeliveryDate.ToString("dd/MM/yyyy").</div>
                                                                                 <div style="font-family: inherit; text-align: center"><br /></div>
                                                                                 <div style="font-family: inherit; text-align: center">Vous pouvez soit faire une nouvelle commande à un autre producteur ou réitérer selon la raison du refus.</div>
                                                                                 <div style="font-family: inherit; text-align: center"><br /></div>
