--- a/Sheaft.Infrastructure.Services/Templates/PayinSucceededEvent.cshtml
+++ b/Sheaft.Infrastructure.Services/Templates/PayinSucceededEvent.cshtml
@@ -129,7 +129,7 @@
                                                             <table class="module preheader preheader-hide" role="module" data-type="preheader" border="0" cellpadding="0" cellspacing="0" width="100%" style="display: none !important; mso-hide: all; visibility: hidden; opacity: 0; color: transparent; height: 0; width: 0;">
                                                                 <tr>
                                                                     <td role="module-content">
-                                                                        <p>Le paiement @Model.Reference a été validé</p>
+                                                                        <p>Votre paiement a bien été validé</p>
                                                                     </td>
                                                                 </tr>
                                                             </table><table class="wrapper" role="module" data-type="image" border="0" cellpadding="0" cellspacing="0" width="100%" style="table-layout: fixed;" data-muid="89fb9f69-35df-453c-ad58-da55775b21c7">
@@ -159,7 +159,7 @@
                                                                     <tr>
                                                                         <td style="padding:18px 0px 18px 0px; line-height:22px; text-align:inherit;" height="100%" valign="top" bgcolor="" role="module-content">
                                                                             <div>
-                                                                                <div style="font-family: inherit; text-align: center">La paiement @Model.Reference pour votre commande de @(Model.TotalPrice)€ a été validé.</div>
+                                                                                <div style="font-family: inherit; text-align: center">La paiement pour votre commande de @(Model.TotalPrice)€ a été validé.</div>
                                                                                 <div style="font-family: inherit; text-align: center"><br /></div>
                                                                                 <div style="font-family: inherit; text-align: center">Vous allez recevoir la confirmation d'envoi de votre commande au producteur d'ici quelques minutes.</div><div></div>
                                                                             </div>
