--- a/Sheaft.Infrastructure.Services/Templates/PurchaseOrderAcceptedEvent.cshtml
+++ b/Sheaft.Infrastructure.Services/Templates/PurchaseOrderAcceptedEvent.cshtml
@@ -129,7 +129,7 @@
                                                             <table class="module preheader preheader-hide" role="module" data-type="preheader" border="0" cellpadding="0" cellspacing="0" width="100%" style="display: none !important; mso-hide: all; visibility: hidden; opacity: 0; color: transparent; height: 0; width: 0;">
                                                                 <tr>
                                                                     <td role="module-content">
-                                                                        <p>@Model.VendorName a accepté votre commande @Model.Reference.</p>
+                                                                        <p>@Model.VendorName a accepté votre commande.</p>
                                                                     </td>
                                                                 </tr>
                                                             </table><table class="wrapper" role="module" data-type="image" border="0" cellpadding="0" cellspacing="0" width="100%" style="table-layout: fixed;" data-muid="91d6135f-0403-47ab-b632-07a73558f13c">
@@ -159,9 +159,9 @@
                                                                     <tr>
                                                                         <td style="padding:18px 0px 18px 0px; line-height:22px; text-align:inherit;" height="100%" valign="top" bgcolor="" role="module-content">
                                                                             <div>
-                                                                                <div style="font-family: inherit; text-align: center">Votre commande @Model.Reference d'un montant de @(Model.TotalOnSalePrice)€ pour le @Model.ExpectedDeliveryDate.ToString("dd/MM/yyyy") a bien été acceptée par @Model.VendorName.</div>
+                                                                                <div style="font-family: inherit; text-align: center">Votre commande d'un montant de @(Model.TotalOnSalePrice)€ pour le @Model.ExpectedDeliveryDate.ToString("dd/MM/yyyy") a bien été acceptée par @Model.VendorName.</div>
                                                                                 <div style="font-family: inherit; text-align: center"><br /></div>
-                                                                                <div style="font-family: inherit; text-align: center">Nous vous tiendrons informé par e-mail lorsque celle-ci sera prête à récupérer.</div><div></div>
+                                                                                <div style="font-family: inherit; text-align: center">Nous vous informerons par e-mail lorsque celle-ci sera prête à récupérer.</div><div></div>
                                                                             </div>
                                                                         </td>
                                                                     </tr>
