--- a/Sheaft.Infrastructure.Services/Templates/PurchaseOrderWithdrawnEvent.cshtml
+++ b/Sheaft.Infrastructure.Services/Templates/PurchaseOrderWithdrawnEvent.cshtml
@@ -129,7 +129,7 @@
                                                             <table class="module preheader preheader-hide" role="module" data-type="preheader" border="0" cellpadding="0" cellspacing="0" width="100%" style="display: none !important; mso-hide: all; visibility: hidden; opacity: 0; color: transparent; height: 0; width: 0;">
                                                                 <tr>
                                                                     <td role="module-content">
-                                                                        <p>La commande @Model.Reference de @(Model.TotalOnSalePrice)€ prévue pour le @Model.ExpectedDeliveryDate.ToString("dd/MM/yyyy") a été annulée par @Model.SenderName</p>
+                                                                        <p>La commande de @(Model.TotalOnSalePrice)€ prévue pour le @Model.ExpectedDeliveryDate.ToString("dd/MM/yyyy") a été annulée par @Model.SenderName</p>
                                                                     </td>
                                                                 </tr>
                                                             </table><table class="wrapper" role="module" data-type="image" border="0" cellpadding="0" cellspacing="0" width="100%" style="table-layout: fixed;" data-muid="489c127f-b2de-43dc-a621-96b1af8fa295">
@@ -159,7 +159,7 @@
                                                                     <tr>
                                                                         <td style="padding:18px 0px 18px 0px; line-height:22px; text-align:inherit;" height="100%" valign="top" bgcolor="" role="module-content">
                                                                             <div>
-                                                                                <div style="font-family: inherit; text-align: center">La commande @Model.Reference de @(Model.TotalOnSalePrice)€ prévue pour le @Model.ExpectedDeliveryDate.ToString("dd/MM/yyyy") a été annulée par @Model.SenderName</div>
+                                                                                <div style="font-family: inherit; text-align: center">La commande de @(Model.TotalOnSalePrice)€ prévue pour le @Model.ExpectedDeliveryDate.ToString("dd/MM/yyyy") a été annulée par @Model.SenderName</div>
                                                                                 <div style="font-family: inherit; text-align: center"><br /></div>
                                                                                 <div style="font-family: inherit; text-align: center"><strong>Raison</strong> : @(string.IsNullOrWhiteSpace(Model.Reason) ? "Non renseignée" : @Model.Reason)</div><div></div>
                                                                             </div>
