--- a/Sheaft.Infrastructure.Services/Templates/ProductImportSucceededEvent.cshtml
+++ b/Sheaft.Infrastructure.Services/Templates/ProductImportSucceededEvent.cshtml
@@ -136,7 +136,7 @@
                                                                 <tbody>
                                                                     <tr>
                                                                         <td style="font-size:6px; line-height:10px; padding:0px 0px 0px 0px;" valign="top" align="center">
-                                                                            <img class="max-width" border="0" style="display:block; color:#000000; text-decoration:none; font-family:Helvetica, arial, sans-serif; font-size:16px; max-width:100% !important; width:100%; height:auto !important;" width="600" alt="" data-proportionally-constrained="true" data-responsive="true" src="http://cdn.mcauto-images-production.sendgrid.net/85cac76975de017a/3e231970-d655-4db0-a057-5940ad85a557/1280x177.png" />
+                                                                            <img class="max-width" border="0" style="display:block; color:#000000; text-decoration:none; font-family:Helvetica, arial, sans-serif; font-size:16px; max-width:100% !important; width:100%; height:auto !important;" width="600" alt="" data-proportionally-constrained="true" data-responsive="true" src="https://content.sheaft.com/resources/emailings/header.png" />
                                                                         </td>
                                                                     </tr>
                                                                 </tbody>
@@ -144,7 +144,7 @@
                                                                 <tbody>
                                                                     <tr>
                                                                         <td style="font-size:6px; line-height:10px; padding:0px 0px 0px 0px;" valign="top" align="center">
-                                                                            <img class="max-width" border="0" style="display:block; color:#000000; text-decoration:none; font-family:Helvetica, arial, sans-serif; font-size:16px; max-width:40% !important; width:40%; height:auto !important;" width="240" alt="" data-proportionally-constrained="true" data-responsive="true" src="http://cdn.mcauto-images-production.sendgrid.net/85cac76975de017a/3fc7dda8-b7c5-4cc5-9e7e-3bf570fee1bd/902x221.png" />
+                                                                            <img class="max-width" border="0" style="display:block; color:#000000; text-decoration:none; font-family:Helvetica, arial, sans-serif; font-size:16px; max-width:40% !important; width:40%; height:auto !important;" width="240" alt="" data-proportionally-constrained="true" data-responsive="true" src="https://content.sheaft.com/resources/emailings/logo.png" />
                                                                         </td>
                                                                     </tr>
                                                                 </tbody>
