--- a/Sheaft.Infrastructure.Services/Templates/PurchaseOrderCreatedEvent.cshtml
+++ b/Sheaft.Infrastructure.Services/Templates/PurchaseOrderCreatedEvent.cshtml
@@ -225,7 +225,7 @@
                                                                                             <table class="module" role="module" data-type="text" border="0" cellpadding="0" cellspacing="0" width="100%" style="table-layout: fixed;" data-muid="ba16cce6-5272-4201-95b7-5a64ffba5b9e" data-mc-module-version="2019-10-22">
                                                                                                 <tbody>
                                                                                                     <tr>
-                                                                                                        <td style="padding:18px 0px 18px 0px; line-height:22px; text-align:inherit;" height="100%" valign="top" bgcolor="" role="module-content"><div><div style="font-family: inherit; text-align: inherit">Prix</div><div></div></div></td>
+                                                                                                        <td style="padding:18px 0px 18px 0px; line-height:22px; text-align:inherit;" height="100%" valign="top" bgcolor="" role="module-content"><div><div style="font-family: inherit; text-align: inherit">Prix TTC</div><div></div></div></td>
                                                                                                     </tr>
                                                                                                 </tbody>
                                                                                             </table>
@@ -246,8 +246,8 @@
                                                                             <table class="module" role="module" data-type="text" border="0" cellpadding="0" cellspacing="0" width="100%" style="table-layout: fixed;" data-muid="d643f6a1-32e6-460a-985d-27a38671136a">
                                                                                 <tbody>
                                                                                 <tr>
-                                                                                    <td style="padding:18px 0px 18px 0px; line-height:22px; text-align:inherit;" height="100%" valign="top" bgcolor="" role="module-content"><div><div style="font-family: inherit; text-align: right">TVA: @(Model.VatPrice)€</div>
-                                                                            <div style="font-family: inherit; text-align: right">Total TTC: @(Model.TotalOnSalePrice)€</div><div></div></div></td>
+                                                                                    <td style="padding:18px 0px 18px 0px; line-height:22px; text-align:inherit;" height="100%" valign="top" bgcolor="" role="module-content"><div>
+                                                                                        <div style="font-family: inherit; text-align: right">Total TTC: @(Model.TotalOnSalePrice)€</div></div></td>
                                                                                 </tr>
                                                                                 </tbody>
                                                                             </table>
