--- a/Sheaft.Web.Manage/Views/Products/Edit.cshtml
+++ b/Sheaft.Web.Manage/Views/Products/Edit.cshtml
@@ -21,108 +21,112 @@
 
 }
 
-    <div class="container">
-        <h2 class="display-4">Product details @(Model.RemovedOn.HasValue ? "(removed)":"")</h2>
+<div class="container">
+    <h2 class="display-4">Product details @(Model.RemovedOn.HasValue ? "(removed)":"")</h2>
+    <br />
+
+    @using (Html.BeginForm("Edit", "Products", FormMethod.Post, new { @class = "form", enctype = "multipart/form-data" }))
+    {
+        @Html.AntiForgeryToken()
+        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        @Html.HiddenFor(model => model.Id)
         <br />
 
-        @using (Html.BeginForm("Edit", "Products", FormMethod.Post, new { @class = "form", enctype = "multipart/form-data" }))
-        {
-            @Html.AntiForgeryToken()
-            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-            @Html.HiddenFor(model => model.Id)
-            <br />
-
-            <div class="form-group">
-                @Html.LabelFor(c => c.Name, new { @class = "form-label" })
-                @Html.TextBoxFor(c => c.Name, null, new { @class = "form-control" })
-            </div>
-            <div class="form-group">
-                @Html.LabelFor(c => c.Reference, new { @class = "form-label" })
-                @Html.TextBoxFor(c => c.Reference, null, new { @class = "form-control" })
-            </div>
-            <div class="form-group">
-                @Html.LabelFor(c => c.WholeSalePricePerUnit, "WholeSalePricePerUnit", new { @class = "form-label" })
-                @Html.TextBoxFor(c => c.WholeSalePricePerUnit, null, new { @class = "form-control" })
-            </div>
-            <div class="form-group">
-                @Html.LabelFor(c => c.Vat, new { @class = "form-label" })
-                @Html.DropDownListFor(c => c.Vat, vats, new { @class = "form-control" })
-            </div>
-            <div class="form-group">
-                @Html.LabelFor(c => c.QuantityPerUnit, "QuantityPerUnit", new { @class = "form-label" })
-                @Html.TextBoxFor(c => c.QuantityPerUnit, null, new { @class = "form-control" })
-            </div>
-            <div class="form-group">
-                @Html.LabelFor(c => c.Unit, new { @class = "form-label" })
-                @Html.DropDownListFor(c => c.Unit, units, new { @class = "form-control" })
-            </div>
-            <div class="form-group">
-                @Html.LabelFor(m => m.VatPricePerUnit)
-                @Html.TextBoxFor(m => m.VatPricePerUnit, null, new { @class = "form-control", @disabled = "disabled" })
-            </div>
-            <div class="form-group">
-                @Html.LabelFor(m => m.OnSalePricePerUnit)
-                @Html.TextBoxFor(m => m.OnSalePricePerUnit, null, new { @class = "form-control", @disabled = "disabled" })
-            </div>
-            <div class="form-group">
-                @Html.LabelFor(m => m.VatPrice)
-                @Html.TextBoxFor(m => m.VatPrice, null, new { @class = "form-control", @disabled = "disabled" })
-            </div>
-            <div class="form-group">
-                @Html.LabelFor(m => m.OnSalePrice)
-                @Html.TextBoxFor(m => m.OnSalePrice, null, new { @class = "form-control", @disabled = "disabled" })
-            </div>
-            <div class="form-group">
-                @Html.LabelFor(m => m.WholeSalePrice)
-                @Html.TextBoxFor(m => m.WholeSalePrice, null, new { @class = "form-control", @disabled = "disabled" })
-            </div>
-            <div class="form-group">
-                @Html.LabelFor(c => c.Picture, new { @class = "form-label" })
-                @if (!string.IsNullOrWhiteSpace(Model.Picture))
-                {
-                    <img src="@Model.Picture" height="100" />
-                }
-                @Html.TextBoxFor(c => c.Picture, new { @class = "form-control", @type = "file" })
-            </div>
-            <div class="form-group">
-                @Html.LabelFor(c => c.ReturnableId, "Returnable", new { @class = "form-label" })
-                @Html.DropDownListFor(c => c.ReturnableId, returnables, new { @class = "form-control" })
-            </div>
-            <div class="form-group">
-                @Html.LabelFor(c => c.Tags, new { @class = "form-label" })
-                @Html.ListBoxFor(c => c.Tags, tags, new { @class = "form-control", @style = "height:12rem;" })
-            </div>
-            <div class="form-group">
-                @Html.LabelFor(c => c.Description, new { @class = "form-label" })
-                @Html.TextAreaFor(c => c.Description, new { @class = "form-control" })
-            </div>
-            <div class="form-check">
-                @Html.CheckBoxFor(m => m.Available, new { @class = "form-check-input" })
-                @Html.LabelFor(m => m.Available, new { @class = "form-check-label" })
-            </div>
-            <div class="form-group">
-                @Html.LabelFor(m => m.CreatedOn)
-                @Html.TextBoxFor(m => m.CreatedOn, null, new { @class = "form-control", @disabled = "disabled" })
-            </div>
-            <div class="form-group">
-                @Html.LabelFor(m => m.UpdatedOn)
-                @Html.TextBoxFor(m => m.UpdatedOn, null, new { @class = "form-control", @disabled = "disabled" })
-            </div>
-            @if (Model.RemovedOn.HasValue)
+        <div class="form-group">
+            @Html.LabelFor(c => c.Name, new { @class = "form-label" })
+            @Html.TextBoxFor(c => c.Name, null, new { @class = "form-control" })
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(c => c.Reference, new { @class = "form-label" })
+            @Html.TextBoxFor(c => c.Reference, null, new { @class = "form-control" })
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(c => c.WholeSalePricePerUnit, "WholeSalePricePerUnit", new { @class = "form-label" })
+            @Html.TextBoxFor(c => c.WholeSalePricePerUnit, null, new { @class = "form-control" })
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(c => c.Vat, new { @class = "form-label" })
+            @Html.DropDownListFor(c => c.Vat, vats, new { @class = "form-control" })
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(c => c.QuantityPerUnit, "QuantityPerUnit", new { @class = "form-label" })
+            @Html.TextBoxFor(c => c.QuantityPerUnit, null, new { @class = "form-control" })
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(c => c.Unit, new { @class = "form-label" })
+            @Html.DropDownListFor(c => c.Unit, units, new { @class = "form-control" })
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(m => m.VatPricePerUnit)
+            @Html.TextBoxFor(m => m.VatPricePerUnit, null, new { @class = "form-control", @disabled = "disabled" })
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(m => m.OnSalePricePerUnit)
+            @Html.TextBoxFor(m => m.OnSalePricePerUnit, null, new { @class = "form-control", @disabled = "disabled" })
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(m => m.VatPrice)
+            @Html.TextBoxFor(m => m.VatPrice, null, new { @class = "form-control", @disabled = "disabled" })
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(m => m.OnSalePrice)
+            @Html.TextBoxFor(m => m.OnSalePrice, null, new { @class = "form-control", @disabled = "disabled" })
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(m => m.WholeSalePrice)
+            @Html.TextBoxFor(m => m.WholeSalePrice, null, new { @class = "form-control", @disabled = "disabled" })
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(c => c.Picture, new { @class = "form-label" })
+            @if (!string.IsNullOrWhiteSpace(Model.Picture))
             {
-                <div class="form-group">
-                    @Html.LabelFor(m => m.RemovedOn)
-                    @Html.TextBoxFor(m => m.RemovedOn, null, new { @class = "form-control", @disabled = "disabled" })
-                </div>
+                <img src="@Model.Picture" height="100" />
             }
-
-            <br />
-            <a asp-controller="Products" asp-action="Index" class="btn btn-light">
-                Cancel
-            </a>
-            <button type="submit" class="btn btn-success">
-                <i class="fa fa-check">&nbsp;Save</i>
-            </button>
+            @Html.TextBoxFor(c => c.Picture, new { @class = "form-control", @type = "file" })
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(c => c.ReturnableId, "Returnable", new { @class = "form-label" })
+            @Html.DropDownListFor(c => c.ReturnableId, returnables, new { @class = "form-control" })
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(c => c.Tags, new { @class = "form-label" })
+            @Html.ListBoxFor(c => c.Tags, tags, new { @class = "form-control", @style = "height:12rem;" })
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(c => c.Description, new { @class = "form-label" })
+            @Html.TextAreaFor(c => c.Description, new { @class = "form-control" })
+        </div>
+        <div class="form-check">
+            @Html.CheckBoxFor(m => m.Available, new { @class = "form-check-input" })
+            @Html.LabelFor(m => m.Available, new { @class = "form-check-label" })
+        </div>
+        <div class="form-check">
+            @Html.CheckBoxFor(m => m.Searchable, new { @class = "form-check-input" })
+            @Html.LabelFor(m => m.Searchable, new { @class = "form-check-label" })
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(m => m.CreatedOn)
+            @Html.TextBoxFor(m => m.CreatedOn, null, new { @class = "form-control", @disabled = "disabled" })
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(m => m.UpdatedOn)
+            @Html.TextBoxFor(m => m.UpdatedOn, null, new { @class = "form-control", @disabled = "disabled" })
+        </div>
+        @if (Model.RemovedOn.HasValue)
+        {
+            <div class="form-group">
+                @Html.LabelFor(m => m.RemovedOn)
+                @Html.TextBoxFor(m => m.RemovedOn, null, new { @class = "form-control", @disabled = "disabled" })
+            </div>
         }
 
-    </div>
+        <br />
+        <a asp-controller="Products" asp-action="Index" class="btn btn-light">
+            Cancel
+        </a>
+        <button type="submit" class="btn btn-success">
+            <i class="fa fa-check">&nbsp;Save</i>
+        </button>
+    }
+
+</div>
