Update - Modification de la gestion de la visibilité (pour les consomateurs/magasins)

--- a/Sheaft.Web.Manage/Views/Products/Edit.cshtml
+++ b/Sheaft.Web.Manage/Views/Products/Edit.cshtml
@@ -101,8 +101,12 @@
             @Html.LabelFor(m => m.Available, new { @class = "form-check-label" })
         </div>
         <div class="form-check">
-            @Html.CheckBoxFor(m => m.Searchable, new { @class = "form-check-input" })
-            @Html.LabelFor(m => m.Searchable, new { @class = "form-check-label" })
+            @Html.CheckBoxFor(m => m.VisibleToStores, new { @class = "form-check-input" })
+            @Html.LabelFor(m => m.VisibleToStores, new { @class = "form-check-label" })
+        </div>
+        <div class="form-check">
+            @Html.CheckBoxFor(m => m.VisibleToConsumers, new { @class = "form-check-input" })
+            @Html.LabelFor(m => m.VisibleToConsumers, new { @class = "form-check-label" })
         </div>
         <div class="form-group">
             @Html.LabelFor(m => m.CreatedOn)
