--- a/Sheaft.Web.Manage/Views/Products/Index.cshtml
+++ b/Sheaft.Web.Manage/Views/Products/Index.cshtml
@@ -73,7 +73,8 @@
                 <th scope="col">WholeSalePrice</th>
                 <th scope="col">Vat</th>
                 <th scope="col">Available</th>
-                <th scope="col">Searchable</th>
+                <th scope="col">Visible consumers</th>
+                <th scope="col">Visible stores</th>
                 @if (!imperonatingId.HasValue)
                 {
                     <th scope="col">Producer</th>
@@ -96,7 +97,8 @@
                     <td>@entity.WholeSalePricePerUnit</td>
                     <td>@(entity.Vat)%</td>
                     <td>@entity.Available</td>
-                    <td>@entity.Searchable</td>
+                    <td>@entity.VisibleToConsumers</td>
+                    <td>@entity.VisibleToStores</td>
                     @if (!imperonatingId.HasValue)
                     {
                         <td>
