Fix - Correction du mail d'annulation de commande conso, l'executant était invalide

--- a/Sheaft.Infrastructure.Services/Templates/PurchaseOrderCancelledEvent.cshtml
+++ b/Sheaft.Infrastructure.Services/Templates/PurchaseOrderCancelledEvent.cshtml
@@ -159,7 +159,7 @@
                                                                     <tr>
                                                                         <td style="padding:18px 0px 18px 0px; line-height:22px; text-align:inherit;" height="100%" valign="top" bgcolor="" role="module-content">
                                                                             <div>
-                                                                                <div style="font-family: inherit; text-align: center">La commande de @(Model.TotalOnSalePrice)€ prévue pour le @Model.ExpectedDeliveryDate.ToString("dd/MM/yyyy") a été annulée par @Model.SenderName.</div>
+                                                                                <div style="font-family: inherit; text-align: center">La commande de @(Model.TotalOnSalePrice)€ prévue pour le @Model.ExpectedDeliveryDate.ToString("dd/MM/yyyy") a été annulée par @Model.VendorName.</div>
                                                                                 <div style="font-family: inherit; text-align: center"><br /></div>
                                                                                 <div style="font-family: inherit; text-align: center"><strong>Raison</strong> : @(string.IsNullOrWhiteSpace(Model.Reason) ? "Non renseignée" : @Model.Reason)</div><div></div>
                                                                             </div>
